Add d3d11 wm stub
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/subwm/CMakeLists.txt
+++ b/subwm/CMakeLists.txt
@@ -11,7 +11,8 @@ endif( )
 
 if( WIN32 AND DIRECT3D11 )
   set( SUBWM_OS_SRC ${SUBWM_OS_SRC}
-                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d11_canvas.c )
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d11_canvas.c
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d11_wm.c )
 endif( )
 
 set( SUBWM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/tex_canvas.c
