--- a/subwm/CMakeLists.txt
+++ b/subwm/CMakeLists.txt
@@ -5,19 +5,21 @@
 #--------------------------------------------------------------------
 
 if( WIN32 AND DIRECT3D9 )
-  set( SUBWM_OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_canvas.c
-                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d9_wm.c )
+  set( SUBWM_OS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/D3D9/d3d9_canvas.c
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/D3D9/d3d9_wm.c )
 endif( )
 
 if( WIN32 AND DIRECT3D11 )
   set( SUBWM_OS_SRC ${SUBWM_OS_SRC}
-                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d11_canvas.c
-                    ${CMAKE_CURRENT_SOURCE_DIR}/src/d3d11_wm.c )
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/D3D11/d3d11_canvas.c
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src/D3D11/d3d11_wm.c )
 endif( )
 
+set( SUBWM_OS_SRC ${SUBWM_OS_SRC}
+                  ${CMAKE_CURRENT_SOURCE_DIR}/src/GL/gl_canvas.c
+                  ${CMAKE_CURRENT_SOURCE_DIR}/src/GL/gl_wm.c )
+
 set( SUBWM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/tex_canvas.c
-               ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_canvas.c
-               ${CMAKE_CURRENT_SOURCE_DIR}/src/gl_wm.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_window.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/ctx_wm.c
                ${CMAKE_CURRENT_SOURCE_DIR}/src/skin.c
