Convert Direct3D code to C++
The native language for using the Direct3D API just happens to be C++.
By compiling the D3D code as C++, we get to use the more readable API
instead of the crappy, autogenerated C wrapper.

Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,8 @@ endif( )
 if( WIN32 )
   set( SGUI_WINDOWS 1 )
 
+  enable_language( CXX )
+
   if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
     message( STATUS "Compiling for 64 bit Windows" )
   else( )
