Add subdirectory for skins
Signed-off-by: David Oberhollenzer <david.oberhollenzer@tele2.at>

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -38,10 +38,10 @@ set( CORE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/canvas.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/pixmap.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/rect.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/skin.c
-              ${CMAKE_CURRENT_SOURCE_DIR}/src/skin_default.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/utf8.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/widget.c
               ${CMAKE_CURRENT_SOURCE_DIR}/src/window.c
+              ${CMAKE_CURRENT_SOURCE_DIR}/src/skins/default.c
 
               ${CORE_PLATFORM_SRC}
      PARENT_SCOPE )
